# lox-rust

./: Cargo.toml  README.md
interpreter/: Cargo.toml
interpreter/src/: ast_printer.rs  callable.rs  error.rs  interpreter.rs  lexer.rs  lox_instance.rs  object.rs  resolver.rs  stmt.rs  token.rs  token_type.rs
sample/: class-calling-super.lox  class-init.lox  class-return-from-init.lox  class-this.lox  closure.lox  fibonacci-func.lox  invalid-class-inheritance.lox  invalid-use-of-super.lox  loop-fibonacci.lox  measure-fibonacci.lox  method-on-class.lox  print.lox  scope.lox  simple-class.lox  simple-func.lox
src/: ast_printer.rs  callable.rs  environment.rs  error.rs  expr.rs  interpreter.rs  lexer.rs  lox_class.rs  lox_instance.rs  main.rs  object.rs  parser.rs  resolver.rs  stmt.rs  token.rs  token_type.rs
